Upgrade reflectutils to jdk 11+