@@ -20,9 +20,10 @@ import org.azeckoski.reflectutils.classes.*;
 import org.azeckoski.reflectutils.exceptions.FieldnameNotFoundException;
 import org.azeckoski.reflectutils.interfaces.TestInterfaceFour;
 import org.azeckoski.reflectutils.interfaces.TestInterfaceOne;
-
 import java.io.Serializable;
 import java.util.*;
+
+
 
 /**
  * Testing the reflection utils
@@ -31,10 +32,6 @@ import java.util.*;
  */
 public class ReflectUtilTest extends TestCase {
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getFieldValue(java.lang.Object, java.lang.String)}.
-     */
-    @SuppressWarnings("unchecked")
     public void testGetFieldValueObjectString() {
         ReflectUtils reflectUtil = new ReflectUtils();
         Object value = null;
@@ -47,7 +44,7 @@ public class ReflectUtilTest extends TestCase {
 
         value = reflectUtil.getFieldValue( thing, "id");
         assertNotNull(value);
-        assertEquals(new Long(3), value);
+        assertEquals(3L, value);
 
         TestNesting nested = new TestNesting(10, "100", new String[] {"A", "B"});
         value = reflectUtil.getFieldValue( nested, "id");
@@ -56,7 +53,7 @@ public class ReflectUtilTest extends TestCase {
 
         value = reflectUtil.getFieldValue( nested, "testEntity.id");
         assertNotNull(value);
-        assertEquals(new Long(3), value);
+        assertEquals(3L, value);
 
         value = reflectUtil.getFieldValue( nested, "testBean");
         assertNull(value);
@@ -108,7 +105,7 @@ public class ReflectUtilTest extends TestCase {
         assertEquals(5, value);
 
         value = reflectUtil.getFieldValue(ultra, "testNesting.testEntity.id");
-        assertEquals(new Long(3), value);
+        assertEquals(3L, value);
 
         value = reflectUtil.getFieldValue(ultra, "testNesting.sList[0]");
         assertEquals("A", value);
@@ -134,9 +131,6 @@ public class ReflectUtilTest extends TestCase {
         }
     }
 
-    /**
-     * Test method for {@link org.azeckoski.reflectutils.ReflectUtils#getFieldValueAsString(java.lang.Object, java.lang.String, java.lang.Class)}.
-     */
     public void testGetFieldValueAsString() {
         ReflectUtils reflectUtil = new ReflectUtils();
         String value = null;
@@ -164,9 +158,6 @@ public class ReflectUtilTest extends TestCase {
         assertNull(value);
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#setFieldValue(java.lang.Object, java.lang.String, java.lang.Object)}.
-     */
     public void testSetFieldValue() {
         ReflectUtils reflectUtil = new ReflectUtils();
         Object thing = null;
@@ -256,8 +247,8 @@ public class ReflectUtilTest extends TestCase {
         reflectUtil.setFieldValue(ultra, "testNesting.id", 20);
         assertEquals(20, ultra.getTestNesting().getId());
 
-        reflectUtil.setFieldValue(ultra, "testNesting.testEntity.id", new Long(6));
-        assertEquals(new Long(6), ultra.getTestNesting().getTestEntity().getId());
+        reflectUtil.setFieldValue(ultra, "testNesting.testEntity.id",6L);
+        assertEquals(Long.valueOf(6), ultra.getTestNesting().getTestEntity().getId());
 
         reflectUtil.setFieldValue(ultra, "testNesting.sList[0]", "AAA");
         assertEquals("AAA", ultra.getTestNesting().getSList().get(0));
@@ -277,9 +268,6 @@ public class ReflectUtilTest extends TestCase {
         }
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#setFieldStringValue(java.lang.Object, java.lang.String, java.lang.String)}.
-     */
     public void testSetFieldStringValue() {
         ReflectUtils reflectUtil = new ReflectUtils();
         Object thing = null;
@@ -294,7 +282,7 @@ public class ReflectUtilTest extends TestCase {
 
         thing = new TestEntity();
         reflectUtil.setFieldValue(thing, "id", "6");
-        assertEquals(new Long(6), ((TestEntity)thing).getId());
+        assertEquals(Long.valueOf(6), ((TestEntity)thing).getId());
 
         thing = new TestEntity();
         reflectUtil.setFieldValue(thing, "sArray", "A, B, C");
@@ -310,15 +298,15 @@ public class ReflectUtilTest extends TestCase {
 
         thing = new TestEntity();
         reflectUtil.setFieldValue(thing, "id", "10", true);
-        assertEquals(new Long(10), ((TestEntity)thing).getId());
+        assertEquals(Long.valueOf(10), ((TestEntity)thing).getId());
 
         thing = new TestEntity();
         reflectUtil.setFieldValue(thing, "id", 10, true);
-        assertEquals(new Long(10), ((TestEntity)thing).getId());
+        assertEquals(Long.valueOf(10), ((TestEntity)thing).getId());
 
         thing = new TestEntity();
         reflectUtil.setFieldValue(thing, "id", new String[] {"10"}, true);
-        assertEquals(new Long(10), ((TestEntity)thing).getId());
+        assertEquals(Long.valueOf(10), ((TestEntity)thing).getId());
 
         thing = new TestEntity();
         reflectUtil.setFieldValue(thing, "bool", true, true);
@@ -357,10 +345,6 @@ public class ReflectUtilTest extends TestCase {
         assertEquals("stuff,plus", ((TestEntity)thing).getExtra());
     }
 
-
-    /**
-     * Test method for {@link org.azeckoski.reflectutils.ReflectUtils#constructClass(java.lang.Class)}.
-     */
     @SuppressWarnings("unchecked")
     public void testConstructClass() {
         ReflectUtils reflectUtil = new ReflectUtils();
@@ -431,12 +415,9 @@ public class ReflectUtilTest extends TestCase {
 
         assertEquals(123, (int) reflectUtil.convert("123", int.class) );
         assertEquals("123", reflectUtil.convert("123", String.class) );
-        assertEquals(new Integer(123), reflectUtil.convert("123", Integer.class) );
+        assertEquals(Integer.valueOf(123), reflectUtil.convert("123", Integer.class) );
     }
 
-    /**
-     * Test method for {@link org.azeckoski.reflectutils.ReflectUtils#pdNameCompare(java.lang.String, java.lang.String)}.
-     */
     public void testPdNameCompare() {
         assertFalse( ReflectUtils.pdNameCompare(null, "") );
         assertFalse( ReflectUtils.pdNameCompare("", "") );
@@ -449,9 +430,6 @@ public class ReflectUtilTest extends TestCase {
         assertTrue( ReflectUtils.pdNameCompare("SField", "sField") );
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getFieldTypes()}.
-     */
     public void testGetFieldTypes() {
         ReflectUtils reflectUtil = new ReflectUtils();
         Map<String, Class<?>> types;
@@ -463,9 +441,6 @@ public class ReflectUtilTest extends TestCase {
         assertEquals(int.class, types.get("myInt"));
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getFieldType(java.lang.Class, java.lang.String)}.
-     */
     public void testGetFieldType() {
         ReflectUtils reflectUtil = new ReflectUtils();
         Class<?> type;
@@ -491,9 +466,6 @@ public class ReflectUtilTest extends TestCase {
         assertEquals(Map.class, type);
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getObjectValues(java.lang.Object)}.
-     */
     public void testGetObjectValues() {
         Map<String, Object> m = null;
         ReflectUtils reflectUtil = new ReflectUtils();
@@ -527,16 +499,13 @@ public class ReflectUtilTest extends TestCase {
         assertTrue(m.containsKey("sArray"));
         assertTrue(m.containsKey("bool"));
         assertTrue(m.containsKey("prefix"));
-        assertEquals(new Long(3), m.get("id"));
+        assertEquals(3L, m.get("id"));
         assertEquals("33", m.get("entityId"));
         assertEquals(null, m.get("extra"));
         assertEquals("crud", m.get("prefix"));
         assertTrue(m.get("sArray").getClass().isArray());
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getFieldNameWithAnnotation(java.lang.Class, java.lang.Class)}.
-     */
     public void testGetFieldNameWithAnnotation() {
         ReflectUtils reflectUtil = new ReflectUtils();
         String fieldName = null;
@@ -548,9 +517,6 @@ public class ReflectUtilTest extends TestCase {
         assertEquals("entityId", fieldName);
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getFieldValueAsString(java.lang.Object, java.lang.String, java.lang.Class)}.
-     */
     public void testGetFieldValueObjectStringClassOfQextendsAnnotation() {
         String value = null;
         ReflectUtils reflectUtil = new ReflectUtils();
@@ -590,9 +556,6 @@ public class ReflectUtilTest extends TestCase {
 
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#deepClone(java.lang.Object, int, java.lang.String[])}.
-     */
     public void testClone() {
         ReflectUtils reflectUtil = new ReflectUtils();
 
@@ -623,9 +586,6 @@ public class ReflectUtilTest extends TestCase {
 
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#deepCopy(java.lang.Object, java.lang.Object, int, java.lang.String[], boolean)}.
-     */
     public void testCopy() {
         ReflectUtils reflectUtil = new ReflectUtils();
 
@@ -738,7 +698,7 @@ public class ReflectUtilTest extends TestCase {
         assertEquals("OLD,BLUE", target.getMyString());
 
         // objects
-        properties.put("myInt", new Long(222));
+        properties.put("myInt", 222L);
         properties.put("myString", 55555);
         results = reflectUtil.populate(target, properties);
         assertNotNull(results);
@@ -762,7 +722,7 @@ public class ReflectUtilTest extends TestCase {
         assertNotNull(results);
         assertEquals(3, results.size());
         assertNotNull(target);
-        assertEquals(new Long(1000), target.getId());
+        assertEquals(Long.valueOf(1000), target.getId());
         assertEquals("OLD", target.getExtra());
         assertEquals("33", target.getEntityId());
         assertEquals(null, target.getBool());
@@ -797,9 +757,6 @@ public class ReflectUtilTest extends TestCase {
         assertEquals(nowCal, target.calendar);
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#makeFieldNameFromMethod(java.lang.String)}.
-     */
     public void testMakeFieldNameFromMethod() {
         String name = null;
 
@@ -819,9 +776,6 @@ public class ReflectUtilTest extends TestCase {
         assertEquals("stuff", name);
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getSuperclasses(java.lang.Class)}.
-     */
     public void testGetSuperclasses() {
         List<Class<?>> superClasses = null;
 
@@ -849,9 +803,6 @@ public class ReflectUtilTest extends TestCase {
         assertTrue( superClasses.contains(Readable.class) );
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#getClassFromCollection(java.util.Collection)}.
-     */
     @SuppressWarnings("unchecked")
     public void testGetClassFromCollection() {
         Class<?> result = null;
@@ -876,21 +827,18 @@ public class ReflectUtilTest extends TestCase {
         assertEquals(String.class, result);
 
         HashSet<Object> s = new HashSet<Object>();
-        s.add(new Double(22.0));
+        s.add(22.0);
         result = ReflectUtils.getClassFromCollection(s);
         assertNotNull(result);
         assertEquals(Double.class, result);
 
         List v = new Vector<Object>();
-        v.add( new Integer(30) );
+        v.add(30);
         result = ReflectUtils.getClassFromCollection(v);
         assertNotNull(result);
         assertEquals(Integer.class, result);
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#contains(T[], java.lang.Object)}.
-     */
     public void testContains() {
         assertFalse( ReflectUtils.contains(new String[] {}, "stuff") );
         assertFalse( ReflectUtils.contains(new String[] {"apple"}, "stuff") );
@@ -898,9 +846,6 @@ public class ReflectUtilTest extends TestCase {
         assertTrue( ReflectUtils.contains(new String[] {"stuff","other","apple"}, "stuff") );
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#capitalize(java.lang.String)}.
-     */
     public void testCapitalize() {
         assertTrue( ReflectUtils.capitalize("lower").equals("Lower") );
         assertTrue( ReflectUtils.capitalize("UPPER").equals("UPPER") );
@@ -910,9 +855,6 @@ public class ReflectUtilTest extends TestCase {
         assertTrue( ReflectUtils.capitalize("m").equals("M") );
     }
 
-    /**
-     * Test method for {@link org.sakaiproject.ReflectUtils.util.reflect.ReflectUtil#unCapitalize(java.lang.String)}.
-     */
     public void testUnCapitalize() {
         assertTrue( ReflectUtils.unCapitalize("lower").equals("lower") );
         assertTrue( ReflectUtils.unCapitalize("UPPER").equals("uPPER") );
@@ -959,7 +901,7 @@ public class ReflectUtilTest extends TestCase {
         // get non-null object data
         m = (Map<String, Object>) map.get("testEntity"); 
         assertNotNull(m);
-        assertEquals(new Long(3), m.get("id"));
+        assertEquals(3L, m.get("id"));
         assertEquals("33", m.get("entityId"));
         assertTrue(m.containsKey("extra"));
         assertEquals(null, m.get("extra")); // null
@@ -999,7 +941,7 @@ public class ReflectUtilTest extends TestCase {
         // get non-null object data
         m = (Map<String, Object>) map.get("testEntity"); 
         assertNotNull(m);
-        assertEquals(new Long(3), m.get("id"));
+        assertEquals(3L, m.get("id"));
         assertEquals("33", m.get("entityId"));
         assertFalse(m.containsKey("extra"));
         assertEquals(null, m.get("extra")); // null
